fix white gap on right side (deleted scrollbar on mobile)

--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,9 @@
 body {
   overflow-x: hidden;
 }
+
+@media (max-width: 768px) {
+  ::-webkit-scrollbar {
+    display: none;
+  }
+}
